--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,21 @@
+astroid==2.3.3
+autopep8==1.5
+click==7.1.2
+dj-database-url==0.5.0
 Django==2.0.13
+django-heroku==0.3.1
+gunicorn==20.1.0
+isort==4.3.21
+joblib==0.15.1
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+nltk==3.5
+psycopg2==2.9.1
+pycodestyle==2.5.0
+pylint==2.4.4
 pytz==2021.3
+regex==2020.6.8
+six==1.14.0
+tqdm==4.46.1
+whitenoise==5.3.0
+wrapt==1.11.2
