--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,8 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+.idea
+.DS_Store
 
 # Installer logs
 pip-log.txt
